text aligned issue fixed on beratugn file

--- a/css/media.css
+++ b/css/media.css
@@ -1392,13 +1392,11 @@
     .image__with-text-text-content h4{
         font-size: 24px;
         line-height: 32px;
-        text-align: center;
     }
     .image__with-text-text-content p{
         font-size: 16px;
         line-height: 28px;
         margin-top: 24px;
-        text-align: center;
     }
     /* Image With Text Section End */
 
